# jogo-detetive-john

./: .gitignore  COPYRIGHT.md  LICENSE  README.md  pyproject.toml
docs/: 01-narrativa.md  02-arquitetura.md  05-capitulos.md
src/jogo/: __init__.py  __main__.py
src/jogo/app/: app.py  navigation.py
src/jogo/chapters/chapter_01/: manifest.json
src/jogo/chapters/chapter_01/ascii/: scn_01_loop_delegacia.txt  scn_03_bilhete.txt  scn_05_escolha_final.txt
src/jogo/content/: registry.py
src/jogo/content/chapter_01/: manifest.json
src/jogo/content/chapter_01/ascii/: scn_01_chamado.txt  scn_01_start.txt  scn_02_apartamento.txt  scn_06_encerramento.txt
src/jogo/core/: config.py
src/jogo/domain/: __init__.py  engine.py  models.py
src/jogo/scenes/: gameplay.py  menu.py
src/jogo/ui/widgets/: actions_panel.py  card.py  scene_panel.py  status_panel.py
src/jogo/ui_flet/: layout.py  main.py
src/jogo/ui_flet/widgets/: actions_panel.py  common.py  narrative_panel.py  scene_panel.py  status_tabs.py
src/jogo_detetive_john.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/unit/: test_registry.py
