[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jogo-detetive-john"
version = "0.1.0"
description = "Jogo narrativo ASCII (desktop-first)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "kivy==2.3.1",
  "kivymd @ https://github.com/kivymd/KivyMD/archive/master.zip",
]


[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv.sources]
kivymd = { url = "https://github.com/kivymd/KivyMD/archive/master.zip" }

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "flet>=0.25,<1.0",

]


[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-q"

[project.scripts]
jogo-flet = "jogo.ui_flet.main:run_app"

